added another grid

--- a/index.html
+++ b/index.html
@@ -61,5 +61,32 @@
             <div></div>
         </article>
     </div>
+    <h2>Another Grid</h2>
+    <div id="another-grid-container">
+        <div class="grid-item">
+            <h3>Forest</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, ullam?</p>
+            <button class="button">Learn more</button>
+            <span></span>
+        </div>
+        <div class="grid-item">
+            <h3>Desert</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, ullam?</p>
+            <button class="button">Learn more</button>
+            <span></span>
+        </div>
+        <div class="grid-item">
+            <h3>Tundra</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, ullam?</p>
+            <button class="button">Learn more</button>
+            <span></span>
+        </div>
+        <div class="grid-item">
+            <h3>Beach</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, ullam?</p>
+            <button class="button">Learn more</button>
+            <span></span>
+        </div>
+    </div>
 </body>
 </html>
